# Uralochka3

./: .gitignore  Makefile  README.md
scripts/: datagen.json  datagen.py  eval_scale.py
src/: CMakeLists.txt  bitboards.cpp  bitboards.h  board.cpp  board.h  common.cpp  common.h  evalparams.cpp  evalparams.h  evaluate.cpp  evaluate.h  game.cpp  game.h  hash.cpp  hash.h  main.cpp  moves.cpp  moves.h  neural.cpp  neural.h  syzygy.cpp  syzygy.h  tests.cpp  tests.h  train_utils.cpp  train_utils.h  tuning_params.cpp  tuning_params.h  uci.cpp  uci.h  uciengine.cpp  uciengine.h
src/cnpy/: cnpy.cpp  cnpy.h
train/: CMakeLists.txt  batch_loader.py  feature_transformer.py  main.py  main_old.py  main_reinforcement.py  model.py  numpyctypes.py  reinforcement.json  req.txt  train.py  uralochka3_batch.cpp  utils.py
utils/: Dockerfile  build_batch.sh  build_ur3.sh
